<resources>
    <string name="app_name">AssignmentTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editText_username">Username</string>
    <string name="editText_password">Password</string>
    <string name="editText_email">Email</string>
    <string name="button_signIn">Sign In</string>
    <string name="textView_SignUp">Don\'t have an account? Register here!</string>
    <string name="editText_confirmPassword">Confirm Password</string>
    <string name="textView_country">Country of Residence</string>
    <string name="button_createAccount">Create Account</string>
    <string name="textView_temperature">Temperature</string>
    <string name="textView_humidity">Humidity</string>
    <string name="textView_windSpeed">Wind Speed</string>
    <string name="textView_welcomeParagraph">This app provides functionality to search for the weather and find questions on stackOverflow. Please use the menu on the left
            to navigate between the different functions. You can also shake your device to go straight to the stackOverflow search functionality</string>
</resources>
