<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/editText_signUp_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="47dp"
        android:ems="10"
        android:hint="@string/editText_username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText_signUp_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/editText_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_signUp_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:hint="@string/editText_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText_signUp_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_signUp_password"
        android:layout_marginStart="0dp"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:hint="@string/editText_confirmPassword"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="234dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="163dp" />

    <TextView
        android:id="@+id/textView_country"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/country_spinner"
        android:text="@string/textView_country"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_createAccount"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="68dp"
        android:text="@string/button_createAccount" />
</RelativeLayout>