<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView_weather_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="66dp"
        android:text="Weather for Derry"
        android:textSize="24sp" />

    <TableLayout
        android:id="@+id/table_weatherDetails"
        android:layout_width="364dp"
        android:layout_height="132dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="182dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="33">

            <TextView
                android:id="@+id/textView_temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/table_weatherDetails"
                android:layout_weight="33"
                android:text="@string/textView_temperature"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_temperatureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow_windSpeed"
            android:layout_width="350dp"
            android:layout_height="33dp"
            android:layout_weight="33">

            <TextView
                android:id="@+id/textView_windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_windSpeed"
                android:textSize="18sp"
                android:layout_weight="33"/>

            <TextView
                android:id="@+id/textView_windSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/table_weatherDetails"
            android:layout_weight="33">

            <TextView
                android:id="@+id/textView_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView_humidity"
                android:textSize="18sp"
                android:layout_weight="33"/>

            <TextView
                android:id="@+id/textView_humidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="18sp" />

        </TableRow>
    </TableLayout>

    <ImageView
        android:id="@+id/imageView_weatherPicture"
        android:layout_width="107dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="141dp"
        android:layout_marginTop="109dp"
        android:src="@mipmap/icons8_partly_cloudy_day_96" />

    <SearchView
        android:id="@+id/searchView_citySearch"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="3dp" />

</RelativeLayout>